--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <!-- acceuil -->
 
-    <div class=" home-container container-fluid  px-5 text-center pt-5">
+    <div class="home-container container-fluid  px-5 text-center pt-5">
         <video id="background-video" autoplay loop muted>
             <source src="./images/pexels-koolshooters-8544782 (2160p).mp4" type="video/mp4">
         </video>
@@ -188,21 +188,106 @@
 
 
     <!-- contact -->
+    <div class="container-fluid bg-warning text-center">
+        <div class="row">
 
-    
-
-
-
-    <div class="container-fluid bg-warning ">
+        </div>
         <div class="row text-center">
-            <div class="col-6">
-rehg
+            <div class="col-lg-4 mt-3 ">
+                <div class="row pt-2 mb-2 pe-2">
+                    <div class="col-6">
+
+                        <input type="text" class="form-control" placeholder="Nom" aria-label="First name">
+                    </div>
+                    <div class="col-6">
+                        <input type="text" class="form-control" placeholder="Prénom" aria-label="Last name">
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="col-12 ">
+                        <div class="form-floating mb-2 pe-2">
+                            <input type="email" class="form-control" id="floatingInputDisabled"
+                                placeholder="Default input">
+                            <label for="floatingInput">E-mail</label>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row pe-2">
+                    <div class="col-12 mb-2">
+                        <select class="form-select form-select-md" aria-label="Large select example">
+                            <option class="" selected>Object</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                    </div>
+                </div>
+
+
+                    <div class="row pe-2">
+                        <div class="col-12">
+                            <div class="form-floating mb-2">
+                                <textarea class="form-control" placeholder="Leave a comment here"
+                                    id="floatingTextarea"></textarea>
+                                <label for="floatingTextarea">Votre demande</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                    <div class="col-4 text-start ">
+                        <button class="btn btn-primary" type="submit">Envoi</button>
+                    </div>
+                </div>
             </div>
-            <div class="col-6">
-u('u(z)')
+
+
+            <div class="col-lg-4 pt-2">
+
+
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46544.23692215669!2d5.576342901566668!3d43.18820013959721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c9af63ace8b8e5%3A0x40819a5fd9703d0!2s13600%20La%20Ciotat!5e0!3m2!1sen!2sfr!4v1706617525206!5m2!1sen!2sfr"
+                    width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            </div>
+
+            <div class="col-lg-4 pt-2 contact-card mt-3 ">
+                <div class="card border-success mb-3 ">
+                    <div class="card-header  border-dark ">Contact</div>
+                    <div class="card-body text-warning">
+                        <h5 class="card-title">Informations</h5>
+                        <div class="col pb-2">
+                            <p class="card-text text-dark"><i class="fa-solid fa-phone" style="color: #212529;"></i>
+                                +33(0)6 33333333</p>
+                        </div>
+                        <div class="col">
+                            <p class="card-text text-dark"><i class="fa-solid fa-envelope" style="color: #212529;"></i>
+                                nabo@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="card-footer border-dark">
+                        Sports & Découvertes
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+
+   
+
+
+
+
+
+
+
+
+
 
     <!-- end contact -->
 
